create auth user

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
         <input type="password" class="form-control" placeholder="**********">
         <a >esqueci minha senha</a>
         <button class="btn-login">Login</button>
-        <button class="btn-register">Cadastar</button>
+        <button class="btn-register" routerLink="/register">Cadastar</button>
         <a routerLink="/">Voltar</a>
     </div>
 </main>
