create loading spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loading [class.hidden]="loading.status"></app-loading>
 <app-navbar [class.hidden]="component.navbar"></app-navbar>
 <router-outlet></router-outlet>
 <app-shooping-cart></app-shooping-cart>
