create validate perfil

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-loading [class.hidden]="loading.status"></app-loading>
 <app-navbar [class.hidden]="component.navbar"></app-navbar>
+<app-header [class.hidden]="component.header"></app-header>
 <router-outlet></router-outlet>
 <app-shooping-cart></app-shooping-cart>
