--- a/src/app/components/login/login.component.sass
+++ b/src/app/components/login/login.component.sass
@@ -20,6 +20,12 @@ main
         -moz-box-shadow: 0px 1px 2px 1px $light-grey
         box-shadow: 0px 1px 2px 1px $light-grey
 
+        form
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: center
+
         h2
             margin-bottom: 20px
 
