--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,5 @@
     <li routerLink="/">Home</li>
     <li>Categorias</li>
     <li>Ofertas</li>
-    <li routerLink="/login">login</li>
+    <li routerLink="/login">Usuário</li>
 </ul>
-<div></div>
