--- a/src/app/components/shooping-cart/shooping-cart.component.html
+++ b/src/app/components/shooping-cart/shooping-cart.component.html
@@ -24,6 +24,6 @@
     </div>
 
     <div>
-        <button>Fechar pedido</button>
+        <button (click)="checkout()">Fechar pedido</button>
     </div>
 </aside>
