--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 
-<h1>Produtos</h1>
+<h1>Destaques</h1>
 <section>
     <div class="products" *ngFor="let product of products">
         <img [attr.src]="product.img" alt="Imagem Produto">
