--- a/src/styles.sass
+++ b/src/styles.sass
@@ -62,3 +62,8 @@ $light-grey: #e6e6e6
         -webkit-box-shadow: 0px 1px 2px 1px $second-color
         -moz-box-shadow: 0px 1px 2px 1px $second-color
         box-shadow: 0px 1px 2px 1px $second-color
+
+.title
+    margin-top: 10px
+    color: $text-color
+    text-align: center
